--- a/blocks/profile/__name-block/profile__name-block.css
+++ b/blocks/profile/__name-block/profile__name-block.css
@@ -1,5 +1,2 @@
 .profile__name-block {
-  display: flex;
-  align-items: center;
-  gap: 18px;
 }
